[tool.poetry]
name = "booster-morph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
pymongo = "^3.11.1"
dnspython = "^2.0.0"
youtube-dl = "^2020.12.7"
pynacl = "^1.4.0"
flask = "^1.1.2"
python-dotenv = "^0.15.0"
Pillow = "^8.0.1"
colorthief = "^0.2.1"
psutil = "^5.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
