[tool.poetry]
name = "booster-morph"
version = "0.1.0"
description = ""
authors = ["haribo423@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
requests = "^2.26.0"
pymongo = "^4.0.1"
dnspython = "^2.1.0"
python-dotenv = "^0.19.2"
Pillow = "^9.1.0"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.4.0"
Flask = "^2.0.2"
aiohttp = "3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
